[gd_scene load_steps=20 format=3 uid="uid://df5xbd42n40dy"]

[ext_resource type="Script" path="res://ui/ui.gd" id="1_b3k1t"]
[ext_resource type="Texture2D" uid="uid://2en4kmdthek3" path="res://art/ui/progress-bar-background.png" id="2_ahkln"]
[ext_resource type="Script" path="res://ui/hearts.gd" id="2_dpohs"]
[ext_resource type="Texture2D" uid="uid://eeh0pgo1scdl" path="res://art/ui/progress-bar-filll.png" id="2_fynqe"]
[ext_resource type="Texture2D" uid="uid://dpb3wq7mb0r1a" path="res://art/ui/progress-bar-food-fill.png" id="3_brebb"]
[ext_resource type="PackedScene" uid="uid://grcomksuxh0c" path="res://heart.tscn" id="3_t3h2c"]
[ext_resource type="Texture2D" uid="uid://c2s48bufxnqi7" path="res://art/ui/progress-bar-water-fill.png" id="4_3r1em"]
[ext_resource type="Script" path="res://ui/progress_bar.gd" id="7_264ll"]
[ext_resource type="Texture2D" uid="uid://dax1mrhmtrdin" path="res://art/ui/panel-wide.png" id="8_xl4of"]
[ext_resource type="Texture2D" uid="uid://d11kh75kfw4kf" path="res://art/ui/panel-time.png" id="9_7g2p4"]
[ext_resource type="Script" path="res://ui/mistakes.gd" id="9_487r8"]
[ext_resource type="PackedScene" uid="uid://kmce0fgqgovn" path="res://ui/mistake.tscn" id="9_tumi7"]
[ext_resource type="Script" path="res://ui/time.gd" id="10_kye1u"]
[ext_resource type="Script" path="res://ui/torches.gd" id="12_4t6v7"]
[ext_resource type="PackedScene" uid="uid://cegvcf8j2et2" path="res://ui/torch.tscn" id="12_8tqxu"]
[ext_resource type="Texture2D" uid="uid://d1lh3llewstte" path="res://art/torch.png" id="14_hvcgr"]
[ext_resource type="Script" path="res://ui/tasks.gd" id="17_hjw4c"]

[sub_resource type="LabelSettings" id="LabelSettings_vyn8t"]
font_size = 70

[sub_resource type="LabelSettings" id="LabelSettings_igttu"]
font_size = 190

[node name="ui" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_b3k1t")

[node name="bottom_left" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -165.0
offset_right = 160.0
offset_bottom = -98.9999
grow_vertical = 0
scale = Vector2(2.5, 2.5)
pivot_offset = Vector2(-10, 10)
theme_override_constants/separation = 0
alignment = 2

[node name="hearts" type="HBoxContainer" parent="bottom_left"]
layout_mode = 2
script = ExtResource("2_dpohs")

[node name="heart1" parent="bottom_left/hearts" instance=ExtResource("3_t3h2c")]
layout_mode = 2
id = 1

[node name="heart2" parent="bottom_left/hearts" instance=ExtResource("3_t3h2c")]
layout_mode = 2
id = 2

[node name="heart3" parent="bottom_left/hearts" instance=ExtResource("3_t3h2c")]
layout_mode = 2
id = 3

[node name="heart4" parent="bottom_left/hearts" instance=ExtResource("3_t3h2c")]
layout_mode = 2
id = 4

[node name="heart5" parent="bottom_left/hearts" instance=ExtResource("3_t3h2c")]
layout_mode = 2
id = 5

[node name="food" type="TextureProgressBar" parent="bottom_left"]
layout_mode = 2
value = 100.0
texture_under = ExtResource("2_fynqe")
texture_over = ExtResource("2_ahkln")
texture_progress = ExtResource("3_brebb")
script = ExtResource("7_264ll")

[node name="Timer" type="Timer" parent="bottom_left/food"]
one_shot = true

[node name="Label" type="Label" parent="bottom_left/food"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 62.0
offset_right = 62.0
offset_bottom = 102.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.2, 0.2)
text = "100"
label_settings = SubResource("LabelSettings_vyn8t")
horizontal_alignment = 1
vertical_alignment = 1

[node name="water" type="TextureProgressBar" parent="bottom_left"]
layout_mode = 2
value = 100.0
texture_under = ExtResource("2_fynqe")
texture_over = ExtResource("2_ahkln")
texture_progress = ExtResource("4_3r1em")
script = ExtResource("7_264ll")

[node name="Timer" type="Timer" parent="bottom_left/water"]
one_shot = true

[node name="Label" type="Label" parent="bottom_left/water"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 62.8
offset_top = -0.200012
offset_right = 62.8
offset_bottom = 101.8
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.2, 0.2)
text = "100"
label_settings = SubResource("LabelSettings_vyn8t")
horizontal_alignment = 1
vertical_alignment = 1

[node name="bottom_right" type="BoxContainer" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -305.0
offset_top = -97.0
offset_right = -153.0
offset_bottom = -49.0
grow_horizontal = 0
grow_vertical = 0
scale = Vector2(2, 2)
pivot_offset = Vector2(10, 10)

[node name="mistakes" type="BoxContainer" parent="bottom_right"]
layout_mode = 2
script = ExtResource("9_487r8")

[node name="mistake1" parent="bottom_right/mistakes" instance=ExtResource("9_tumi7")]
layout_mode = 2
id = 1

[node name="mistake2" parent="bottom_right/mistakes" instance=ExtResource("9_tumi7")]
layout_mode = 2
id = 2

[node name="mistake3" parent="bottom_right/mistakes" instance=ExtResource("9_tumi7")]
layout_mode = 2
id = 3

[node name="top_right" type="Control" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -599.0
offset_right = -99.0
offset_bottom = 64.0
grow_horizontal = 0
scale = Vector2(1.2, 1.2)
pivot_offset = Vector2(50, -40)

[node name="torches_panel" type="TextureRect" parent="top_right"]
layout_mode = 2
offset_right = 500.0
offset_bottom = 64.0
texture = ExtResource("8_xl4of")

[node name="torches" type="HBoxContainer" parent="top_right/torches_panel"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -32.0
offset_right = 472.0
offset_bottom = 32.0
grow_vertical = 2
theme_override_constants/separation = 0
script = ExtResource("12_4t6v7")

[node name="torch7" parent="top_right/torches_panel/torches" instance=ExtResource("12_8tqxu")]
layout_mode = 2
id = 7

[node name="torch6" parent="top_right/torches_panel/torches" instance=ExtResource("12_8tqxu")]
layout_mode = 2
id = 6

[node name="torch5" parent="top_right/torches_panel/torches" instance=ExtResource("12_8tqxu")]
layout_mode = 2
id = 5

[node name="torch4" parent="top_right/torches_panel/torches" instance=ExtResource("12_8tqxu")]
layout_mode = 2
id = 4

[node name="torch3" parent="top_right/torches_panel/torches" instance=ExtResource("12_8tqxu")]
layout_mode = 2
id = 3

[node name="torch2" parent="top_right/torches_panel/torches" instance=ExtResource("12_8tqxu")]
layout_mode = 2
id = 2

[node name="torch1" parent="top_right/torches_panel/torches" instance=ExtResource("12_8tqxu")]
layout_mode = 2
id = 1

[node name="torch_icon" type="TextureRect" parent="top_right"]
layout_mode = 2
offset_left = 405.333
offset_top = -20.0
offset_right = 469.333
offset_bottom = 44.0
scale = Vector2(2, 2)
texture = ExtResource("14_hvcgr")

[node name="top_left" type="BoxContainer" parent="."]
layout_mode = 1
offset_right = 40.0
offset_bottom = 40.0
scale = Vector2(1.5, 1.5)
pivot_offset = Vector2(-20, -20)

[node name="time_container" type="TextureRect" parent="top_left"]
layout_mode = 2
texture = ExtResource("9_7g2p4")

[node name="time" type="Label" parent="top_left/time_container"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 16.0
offset_top = 6.0
offset_right = 372.0
offset_bottom = 205.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.2, 0.2)
text = "00:00"
label_settings = SubResource("LabelSettings_igttu")
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("10_kye1u")

[node name="tasks" type="ScrollContainer" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -314.0
offset_top = -210.0
offset_right = -164.0
offset_bottom = -1.0
grow_horizontal = 0
grow_vertical = 2
scale = Vector2(2, 2)
script = ExtResource("17_hjw4c")

[node name="BoxContainer" type="VBoxContainer" parent="tasks"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 10
theme_override_constants/separation = 5
alignment = 2

[node name="Timer" type="Timer" parent="tasks"]
wait_time = 0.1
one_shot = true

[connection signal="value_changed" from="bottom_left/hearts/heart1" to="bottom_left/hearts" method="_on_heart_5_value_changed"]
[connection signal="value_changed" from="bottom_left/hearts/heart2" to="bottom_left/hearts" method="_on_heart_4_value_changed"]
[connection signal="value_changed" from="bottom_left/hearts/heart3" to="bottom_left/hearts" method="_on_heart_3_value_changed"]
[connection signal="value_changed" from="bottom_left/hearts/heart4" to="bottom_left/hearts" method="_on_heart_2_value_changed"]
[connection signal="value_changed" from="bottom_left/hearts/heart5" to="bottom_left/hearts" method="_on_heart_1_value_changed"]
[connection signal="condition_fulfilled" from="bottom_left/food" to="." method="_on_food_condition_fulfilled"]
[connection signal="mistake" from="bottom_left/food" to="." method="_on_food_mistake"]
[connection signal="mouse_entered" from="bottom_left/food" to="bottom_left/food" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="bottom_left/food" to="bottom_left/food" method="_on_mouse_exited"]
[connection signal="timeout" from="bottom_left/food/Timer" to="bottom_left/food" method="_on_timer_timeout"]
[connection signal="condition_fulfilled" from="bottom_left/water" to="." method="_on_water_condition_fulfilled"]
[connection signal="mistake" from="bottom_left/water" to="." method="_on_water_mistake"]
[connection signal="mouse_entered" from="bottom_left/water" to="bottom_left/water" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="bottom_left/water" to="bottom_left/water" method="_on_mouse_exited"]
[connection signal="timeout" from="bottom_left/water/Timer" to="bottom_left/water" method="_on_timer_timeout"]
[connection signal="condition_fulfilled" from="bottom_right/mistakes" to="." method="_on_mistakes_condition_fulfilled"]
[connection signal="mistake" from="bottom_right/mistakes" to="." method="_on_mistakes_mistake"]
[connection signal="value_changed" from="bottom_right/mistakes/mistake1" to="bottom_right/mistakes" method="_on_mistake_1_value_changed"]
[connection signal="value_changed" from="bottom_right/mistakes/mistake2" to="bottom_right/mistakes" method="_on_mistake_2_value_changed"]
[connection signal="value_changed" from="bottom_right/mistakes/mistake3" to="bottom_right/mistakes" method="_on_mistake_3_value_changed"]
[connection signal="condition_fulfilled" from="top_right/torches_panel/torches" to="." method="_on_torches_condition_fulfilled"]
[connection signal="mistake" from="top_right/torches_panel/torches" to="." method="_on_torches_mistake"]
[connection signal="value_changed" from="top_right/torches_panel/torches/torch7" to="top_right/torches_panel/torches" method="_on_torch_7_value_changed"]
[connection signal="value_changed" from="top_right/torches_panel/torches/torch6" to="top_right/torches_panel/torches" method="_on_torch_6_value_changed"]
[connection signal="value_changed" from="top_right/torches_panel/torches/torch5" to="top_right/torches_panel/torches" method="_on_torch_5_value_changed"]
[connection signal="value_changed" from="top_right/torches_panel/torches/torch4" to="top_right/torches_panel/torches" method="_on_torch_4_value_changed"]
[connection signal="value_changed" from="top_right/torches_panel/torches/torch3" to="top_right/torches_panel/torches" method="_on_torch_3_value_changed"]
[connection signal="value_changed" from="top_right/torches_panel/torches/torch2" to="top_right/torches_panel/torches" method="_on_torch_2_value_changed"]
[connection signal="value_changed" from="top_right/torches_panel/torches/torch1" to="top_right/torches_panel/torches" method="_on_torch_1_value_changed"]
[connection signal="timeout" from="tasks/Timer" to="tasks" method="_on_timer_timeout"]
